include/teide/td.h

/* ===== Error Handling ===== */

typedef enum {
    TD_OK = 0,
    TD_ERR_OOM,
    TD_ERR_TYPE,
    TD_ERR_RANGE,
    TD_ERR_LENGTH,
    TD_ERR_RANK,
    TD_ERR_DOMAIN,
    TD_ERR_NYI,
    TD_ERR_IO,
    TD_ERR_SCHEMA,
    TD_ERR_CORRUPT
} td_err_t;
/* ===== Core Type: td_t (32-byte block header) ===== */

typedef struct td_t {
    /* Bytes 0-15: nullable bitmask / slice / ext nullmap */
    union {
        uint8_t  nullmap[16];
        struct { struct td_t* slice_parent; int64_t slice_offset; };
        struct { struct td_t* ext_nullmap;  int64_t _reserved; };
    };
    /* Bytes 16-31: metadata + value */
    uint8_t  mmod;       /* 0=arena, 1=file-mmap, 2=direct-mmap */
    uint8_t  order;      /* buddy order (block size = 2^order) */
    int8_t   type;       /* negative=atom, positive=vector, 0=LIST */
    uint8_t  attrs;      /* attribute flags */
    _Atomic(uint32_t) rc; /* reference count */
    union {
        uint8_t  b8;     /* BOOL atom */
        uint8_t  u8;     /* U8 atom */
        char     c8;     /* CHAR atom */
        int16_t  i16;    /* I16 atom */
        int32_t  i32;    /* I32 atom */
        uint32_t u32;    /* ENUM atom (intern index) */
        int64_t  i64;    /* I64/SYMBOL/DATE/TIME/TIMESTAMP atom */
        double   f64;    /* F64 atom */
        struct td_t* obj; /* pointer to child (long strings, GUID) */
        struct { uint8_t slen; char sdata[7]; }; /* SSO string (<=7 bytes) */
        int64_t  len;    /* vector element count */
    };
} td_t;
/* Operation node (32 bytes, fits one cache line) */
typedef struct td_op {
    uint16_t       opcode;     /* OP_ADD, OP_SCAN, OP_FILTER, etc. */
    uint8_t        arity;      /* 0, 1, or 2 */
    uint8_t        flags;      /* FUSED, DEAD */
    int8_t         out_type;   /* inferred output type */
    uint8_t        pad[3];
    uint32_t       id;         /* unique node ID */
    uint32_t       est_rows;   /* estimated row count */
    struct td_op*  inputs[2];  /* NULL if unused */
} td_op_t;
/* Extended operation node for N-ary ops (heap-allocated, variable size) */
typedef struct td_op_ext {
    td_op_t base;              /* 32 bytes standard node */
    union {
        td_t*   literal;       /* OP_CONST: inline literal value */
        int64_t sym;           /* OP_SCAN: column name symbol ID */
        struct {               /* OP_GROUP: group-by specification */
            td_op_t**  keys;
            uint8_t    n_keys;
            uint8_t    n_aggs;
            uint16_t*  agg_ops;
            td_op_t**  agg_ins;
        };
        struct {               /* OP_SORT: multi-column sort */
            td_op_t**  columns;
            uint8_t*   desc;
            uint8_t*   nulls_first; /* 1=nulls first, 0=nulls last */
            uint8_t    n_cols;
        } sort;
        struct {               /* OP_JOIN: join specification */
            td_op_t**  left_keys;
            td_op_t**  right_keys;
            uint8_t    n_join_keys;
            uint8_t    join_type;  /* 0=inner, 1=left */
        } join;
        struct {               /* OP_WINDOW: window functions */
            td_op_t**  part_keys;
            td_op_t**  order_keys;
            uint8_t*   order_descs;
            td_op_t**  func_inputs;
            uint8_t*   func_kinds;    /* TD_WIN_ROW_NUMBER etc. */
            int64_t*   func_params;   /* NTILE(n), LAG offset, etc. */
            uint8_t    n_part_keys;
            uint8_t    n_order_keys;
            uint8_t    n_funcs;
            uint8_t    frame_type;    /* TD_FRAME_ROWS / TD_FRAME_RANGE */
            uint8_t    frame_start;   /* TD_BOUND_* */
            uint8_t    frame_end;     /* TD_BOUND_* */
            int64_t    frame_start_n;
            int64_t    frame_end_n;
        } window;
    };
} td_op_ext_t;
/* Operation graph */
typedef struct td_graph {
    td_op_t*       nodes;       /* array of op nodes (malloc'd) */
    uint32_t       node_count;  /* number of nodes */
    uint32_t       node_cap;    /* allocated capacity */
    td_t*          table;       /* bound table (provides columns for OP_SCAN) */
    td_op_ext_t**  ext_nodes;   /* tracked extended nodes for cleanup */
    uint32_t       ext_count;   /* number of extended nodes */
    uint32_t       ext_cap;     /* capacity of ext_nodes array */
    td_t*          filter_mask; /* boolean mask for group-by: 0=skip */
} td_graph_t;
/* ===== Memory Allocator API ===== */

td_t*    td_alloc(size_t data_size);
void     td_free(td_t* v);
void     td_arena_init(void);
void     td_arena_destroy_all(void);
/* ===== COW / Ref Counting API ===== */

void     td_retain(td_t* v);
void     td_release(td_t* v);
/* ===== Atom Constructors ===== */

td_t* td_bool(bool val);
td_t* td_i64(int64_t val);
td_t* td_f64(double val);
/* ===== Vector API ===== */

td_t* td_vec_new(int8_t type, int64_t capacity);
td_t* td_vec_append(td_t* vec, const void* elem);
void* td_vec_get(td_t* vec, int64_t idx);
td_t* td_vec_slice(td_t* vec, int64_t offset, int64_t len);
td_t* td_vec_from_raw(int8_t type, const void* data, int64_t count);
/* ===== String API ===== */

const char* td_str_ptr(td_t* s);
size_t      td_str_len(td_t* s);
/* ===== Symbol Intern Table API ===== */

void     td_sym_init(void);
void     td_sym_destroy(void);
int64_t  td_sym_intern(const char* str, size_t len);
int64_t  td_sym_find(const char* str, size_t len);
td_t*    td_sym_str(int64_t id);
/* ===== Table API ===== */

td_t*       td_table_new(int64_t ncols);
td_t*       td_table_add_col(td_t* tbl, int64_t name_id, td_t* col_vec);
td_t*       td_table_get_col(td_t* tbl, int64_t name_id);
td_t*       td_table_get_col_idx(td_t* tbl, int64_t idx);
int64_t     td_table_col_name(td_t* tbl, int64_t idx);
int64_t     td_table_ncols(td_t* tbl);
int64_t     td_table_nrows(td_t* tbl);
/* ===== Operation Graph API ===== */

td_graph_t* td_graph_new(td_t* tbl);
void        td_graph_free(td_graph_t* g);
/* Source ops */
td_op_t* td_scan(td_graph_t* g, const char* col_name);
td_op_t* td_const_f64(td_graph_t* g, double val);
td_op_t* td_const_i64(td_graph_t* g, int64_t val);
td_op_t* td_const_bool(td_graph_t* g, bool val);
td_op_t* td_const_vec(td_graph_t* g, td_t* vec);
td_op_t* td_const_table(td_graph_t* g, td_t* table);
/* Unary element-wise ops */
td_op_t* td_neg(td_graph_t* g, td_op_t* a);
td_op_t* td_abs(td_graph_t* g, td_op_t* a);
td_op_t* td_not(td_graph_t* g, td_op_t* a);
td_op_t* td_sqrt_op(td_graph_t* g, td_op_t* a);
td_op_t* td_log_op(td_graph_t* g, td_op_t* a);
td_op_t* td_exp_op(td_graph_t* g, td_op_t* a);
td_op_t* td_ceil_op(td_graph_t* g, td_op_t* a);
td_op_t* td_floor_op(td_graph_t* g, td_op_t* a);
td_op_t* td_isnull(td_graph_t* g, td_op_t* a);
/* Binary element-wise ops */
td_op_t* td_add(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_sub(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_mul(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_div(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_mod(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_eq(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_ne(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_lt(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_le(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_gt(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_ge(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_and(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_or(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_min2(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_max2(td_graph_t* g, td_op_t* a, td_op_t* b);
/* Reduction ops */
td_op_t* td_sum(td_graph_t* g, td_op_t* a);
td_op_t* td_prod(td_graph_t* g, td_op_t* a);
td_op_t* td_min_op(td_graph_t* g, td_op_t* a);
td_op_t* td_max_op(td_graph_t* g, td_op_t* a);
td_op_t* td_count(td_graph_t* g, td_op_t* a);
td_op_t* td_avg(td_graph_t* g, td_op_t* a);
td_op_t* td_first(td_graph_t* g, td_op_t* a);
td_op_t* td_last(td_graph_t* g, td_op_t* a);
/* Structural ops */
td_op_t* td_filter(td_graph_t* g, td_op_t* input, td_op_t* predicate);
td_op_t* td_sort_op(td_graph_t* g, td_op_t* table_node,
                     td_op_t** keys, uint8_t* descs, uint8_t* nulls_first,
                     uint8_t n_cols);
td_op_t* td_group(td_graph_t* g, td_op_t** keys, uint8_t n_keys,
                   uint16_t* agg_ops, td_op_t** agg_ins, uint8_t n_aggs);
td_op_t* td_join(td_graph_t* g,
                  td_op_t* left_table, td_op_t** left_keys,
                  td_op_t* right_table, td_op_t** right_keys,
                  uint8_t n_keys, uint8_t join_type);
td_op_t* td_head(td_graph_t* g, td_op_t* input, int64_t n);
td_op_t* td_tail(td_graph_t* g, td_op_t* input, int64_t n);
/* ===== Optimizer API ===== */

td_op_t* td_optimize(td_graph_t* g, td_op_t* root);
/* ===== Executor API ===== */

td_t* td_execute(td_graph_t* g, td_op_t* root);
/* Splayed table I/O */
td_err_t td_splay_save(td_t* tbl, const char* dir);
td_t*    td_splay_load(const char* dir);
/* Partitioned table */
td_t*    td_part_load(const char* db_root, const char* table_name);
/* ===== CSV API ===== */

td_t* td_csv_read(const char* path);
td_t* td_csv_read_opts(const char* path, char delimiter, bool header,
                        const int8_t* col_types, int32_t n_types);
void     td_pool_destroy(void);